--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ p {
   margin: 0 auto;
   padding: 36px 16px;
   overflow: none;
-  height: 85vh;
+  height: 80vh;
   display: flex;
   flex-direction: row;
   align-items: center;
